[package]
name = "mkvproto"
version = "0.1.0"
authors = ["Maymomo <3466365807@qq.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mkvproto"
path = "src/lib.rs"

[dependencies]
protobuf = "=2.8.0"
grpcio = { version = "0.5.0-alpha.4", default-features = false, features = ["secure"] }

[build-dependencies]
protobuf-build = { version = "0.10", default-features = false }

[features]
default = ["protobuf-codec"]
protobuf-codec = ["protobuf-build/grpcio-protobuf-codec", "grpcio/protobuf-codec"]
